# Organ-omics

./: .gitignore  CITATION.cff  CONTRIBUTING.md  Organomics_report.odt  README.md  contour_dataset.py  extract_organomics.py  extract_radiomics.py  paper.md  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: draft-pdf.yml
Paper/: paper.bib  paper.md
data/: .gitignore  Radiomics.csv
data/Dataset001_Test/: dataset.json
data/csvs/: Organomics.csv  OrganomicsClinical_performance.ods  Organomics_performance.csv  Radiomics  RadiomicsClinical_performance.csv  RadiomicsClinical_performance.ods  Radiomics_performance.csv
data/sample_configs/: dataset_anisotropic_spacing.json  dataset_float_spacing.json  dataset_int_spacing.json  dataset_no_spacing.json  dataset_wrong_spacing.json
examples/: Hecktor22.py  Hecktor22_organomics.py  Hecktor22_radiomics.py  Hecktor25.py  Hecktor_organomics.py  Hecktor_radiomics.py  lrebaud22.py  paper_example.sh  preprocess_NSCLC_radiogenomics.py
organomics/: contour_dataset.py  extract_organomics.py  extract_radiomics.py
organomics/utils/: parse.py  radiomics_extraction.py
tests/: test_config.py  test_radiomics.py
utils/: organ_contours.py  organomics_extraction.py  parse.py  radiomics_extraction.py
utils/radiomics/: extraction.py
utils/training/: cross_val.py
utils/volumes/: images.py  masks.py
