[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "organomics"
version = "0.0.3"
dependencies = ["numpy",
                "TotalSegmentator",
                "nibabel"]
requires-python = ">=3.10"
authors = [
  {name = "Zacharia Mesbah", email = "mesbah.zacharia@sfr.fr"},
]
readme = "README.md"
[project.scripts]
organomics_contour_dataset = "contour_dataset:main"
organomics_extract_radiomics = "extract_radiomics:main"
[tool.setuptools.package-dir]
'' = "organomics"
